feat(billing): billing implementation - WIP